--- a/FriendlyChat/FriendlyChatSwift/Info.plist
+++ b/FriendlyChat/FriendlyChatSwift/Info.plist
@@ -29,7 +29,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>REVERSED_CLIENT_ID</string>
+				<string>com.googleusercontent.apps.450475694987-b2rnkag4ov358969mur2943h48ouhr3l</string>
 			</array>
 		</dict>
 	</array>
